--- a/cert-tools/confx.ini
+++ b/cert-tools/confx.ini
@@ -16,7 +16,7 @@ issuer_id = https://raw.githubusercontent.com/cvegaj/PE_test/master/IssuerID.jso
 
 # certificate information
 certificate_language = en-US
-certificate_description = Curso integrador, abierto en su tematica, y de aplicacion de estrategias de diseno e investigacion a un problema de la ingenieria electrica.
+certificate_description = Certificado de proyecto eléctrico para graduación de bachillerato en Ingeniería Eléctrica.
 certificate_title = Proyecto Electrico
 
 
