--- a/cert-viewer/confx2.ini
+++ b/cert-viewer/confx2.ini
@@ -1,9 +1,9 @@
-recent_certids=3dc6b7b6-a2ed-4c3b-99fb-0bb6d1420c54,6e8c850c-e9f8-4f47-97ac-637f2f58339d,
+recent_certids=3dc6b7b6-a2ed-4c3b-99fb-0bb6d1420c54,451be1e1-e267-457a-99c3-58f4c7e63d19,6e8c850c-e9f8-4f47-97ac-637f2f58339d,c4f0e8d6-f159-4c21-9422-9703071cc9e0,
 secret_key=\xe0\xfd\x7f-\x9b:0\xda?_\xfd**iO\xdb|d\xff\x80\xa7\xce\x8e\xbe
 cert_store_type=simplekv_fs
 cert_store_path=cert_data
 
-issuer_name=Certificados
+issuer_name=Descripcion
 issuer_logo_path=img/logo.png
 issuer_email=eie@ucr.ac.cr
 theme=default
