--- a/cert-viewer/confx.ini
+++ b/cert-viewer/confx.ini
@@ -3,7 +3,7 @@ secret_key=\xe0\xfd\x7f-\x9b:0\xda?_\xfd**iO\xdb|d\xff\x80\xa7\xce\x8e\xbe
 cert_store_type=simplekv_fs
 cert_store_path=cert_data
 
-issuer_name=Certificados
+issuer_name=Descripcion
 issuer_logo_path=img/logo.png
 issuer_email=eie@ucr.ac.cr
 theme=default
